--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
+<html lang="sv">
   <head>
+    <meta charset="utf-8">
     <title>Examensarbete VT2019</title>
-
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Detta är Examensarbetet 2019
+    <h1>Detta är Examensarbetet 2019</h1>
+    <p>
+      Detta är artefakten för Rasmus Jarenmarks exjobb VT2019
+    </p>
   </body>
 </html>
