--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 </head>
 
-<body>
+<body onload="changeNameObf();">
   <div id="menu">
     <i>Artekfakt</i>
   </div>
