Made changeNameObf() recursive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 </head>
 
-<body onload="changeNameObf();">
+<body onload="changeNameObf(arrayObfuscation);">
   <div id="menu">
     <i>Artekfakt</i>
   </div>
