--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="script.js"></script>
 </head>
 
-<body onload="changeNameObf(JSON.stringify(data))">
+<body onload="init()">
   <div id="menu">
     <i>Artekfakt</i>
   </div>
