Testing jquery function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="convertcsv.json"></script>
   <script src="script.js"></script>
+  <script src="jquery/jquery-3.3.1.js"></script>
 </head>
 
 <body onload="init()">
@@ -30,7 +31,7 @@
 
   <div class="container" id="container">
     <p>
-      <button type="button" onclick="loadDoc(); ">Super Hemligt Meddelande</button>
+      <button type="button" onclick=" " id="button">Super Hemligt Meddelande</button>
     </p>
   </div>
 
