Modified so measure would work

--- a/index.html
+++ b/index.html
@@ -31,15 +31,8 @@
 
   <div class="container" id="container">
     <p>
-      <button type="button" onclick=" " id="button">Super Hemligt Meddelande</button>
+      <button type="button" onclick="" id="button">Ladda om sidan</button>
     </p>
-  </div>
-
-  <div class="container" id="formcontainer">
-    Namn: <input type="text" id="uname"><br />
-    Efternamn: <input type="text" id="ulname"><br />
-    Mail: <input type="text" id="umail"><br />
-    <input type="submit" name="userSubmit" onclick="createUser();">
   </div>
 </body>
 
